# emulator

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CODING_STYLE.md  Makefile  README.md
include/emulator/: app.h  bus.h  cpu.h  debugger.h  device.h  trace.h
include/emulator/app/: app.h  terminal.h  utils.h  vterm_manager.h
include/emulator/bus/: bus.h
include/emulator/cpu/: cpu.h
include/emulator/debugger/: debugger.h  expression_parser.h
include/emulator/device/: device.h  display.h  memory.h  timer.h  uart.h
include/emulator/logging/: logger.h  logging.h
src/: CMakeLists.txt  main.cpp
src/app/: cli.cpp  config.cpp  emulator.cpp  logger.cpp  logging.cpp  runtime.cpp  terminal.cpp  utils.cpp  vterm_manager.cpp
src/bus/: core.cpp
src/debugger/: core.cpp  expression_parser.cpp
src/device/: base.cpp  display.cpp  memory.cpp  timer.cpp  uart.cpp
src/trace/: recorder.cpp
test/: CMakeLists.txt  Makefile  device_tests.cc  display_demo.cc  integration_tests.cc  rom_util.h  stdout_capture.cc  stdout_capture.h  test_framework.cc  test_framework.h  test_helpers.cc  test_helpers.h  test_main.cc  toy_cpu_executor.cc  toy_cpu_executor.h  toy_isa.h  trace_tests.cc
